--- a/Serverless-Email-Marketing-Application/devops-challenge-template.html
+++ b/Serverless-Email-Marketing-Application/devops-challenge-template.html
@@ -55,7 +55,7 @@
         <h1>🚀 Cloud Quest: DevOps Challenge 🏆</h1>
     </div>
     <div class="content">
-        <p>Greetings, Cloud Warrior!</p>
+        <p>Greetings, Cloud Warrior {{FirstName}} !</p>
         
         <p>You've been selected for an epic adventure in the realm of DevOps. Are you ready to embark on a journey filled with containerization, automation, and cloud mastery?</p>
         
